# alex-crm-rs

./: .gitignore  CONTEXT.md  CRM_DEV_PLAN.md  CRM_RUST_sisyphus.md  Cargo.toml  IMPLEMENTATION_GEMMA.md  README.md  SESSION_CHECKPOINT.md  build.rs  git-index-backup.txt  package-lock.json  package.json  report.20260523.150959.228140.0.001.json
.cargo/: config.toml
.github/: copilot-instructions.md
data/: notes_app.db
plan-archive/: CRM_DEV_PLAN_RUST_FLTK.md  CRM_RUST.md  CRM_app.md
src/: app.rs  lib.rs  main.rs  state.rs  tasks.rs
src/backend/: backup_worker.rs  camel_tokenizer.c  db_worker.rs  mod.rs  schema.rs
src/backend/camel_tokenizer/: Cargo.toml  Makefile  build.rs  lib.rs
src/backend/camel_tokenizer/src/: camel_tokenizer.c  camel_tokenizer_wrap.c  lib.rs
src/policies/: logging.rs  mod.rs  retry.rs
src/ui/: companies_tab.rs  detail_window.rs  main_window.rs  mod.rs  new_company_form.rs  theme.rs
tests/: companies_tab.rs
