[package]
name = "alex-crm"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = "1.4"
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
crossbeam = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
